[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l1-pager"
version = "1.1.1"
description = "Context Garbage Collector (CGC) for LangGraph agents — virtual memory for LLM context windows"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "L1-Pager Contributors" },
]
keywords = [
    "langgraph", "langchain", "llm", "agents", "context-window",
    "memory", "context-management", "ai", "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
redis = ["redis>=4.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/l1-pager/l1-pager"
Repository = "https://github.com/l1-pager/l1-pager"
Issues = "https://github.com/l1-pager/l1-pager/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["l1_pager*"]
